--- a/1/1 ДЗ.md
+++ b/1/1 ДЗ.md
@@ -1,7 +1,7 @@
-# Домашнее задание 1
+# Домашнее задание по теории кодирования
 
 ## Задача 1
-Дан (5,2)-код, кодовые слова которого приведены в таблице:
+Дан $(5,2)$-код, кодовые слова которого приведены в таблице:
 
 | ИС | КС    |
 |----|-------|
@@ -10,98 +10,128 @@
 | 10 | 01011 |
 | 11 | 11101 |
 
-Требуется найти вероятность ошибки при передаче по двоичному симметричному каналу (ДСК) с переходной вероятностью \(p = 10^{-3}\), а также построить порождающую и проверочную матрицы кода.
+Требуется:
+- найти вероятность ошибки при передаче по двоичному симметричному каналу (ДСК) с переходной вероятностью $p = 10^{-3}$;
+- построить порождающую и проверочную матрицы кода.
 
-### Вероятность ошибки
-Код является линейным, поэтому вероятность ошибочного декодирования не зависит от того, какое именно слово передавалось. Рассмотрим передачу слова \(c_0 = 00000\). Минимальное расстояние кода \(d_{\min}\) можно найти, вычислив попарные расстояния Хэмминга между всеми кодовыми словами:
-- \(d(00000, 10110) = 3\)
-- \(d(00000, 01011) = 3\)
-- \(d(00000, 11101) = 4\)
-- \(d(10110, 01011) = 4\)
-- \(d(10110, 11101) = 3\)
-- \(d(01011, 11101) = 3\)
+### Решение
 
-Таким образом, \(d_{\min} = 3\). Следовательно, код гарантированно исправляет любые однократные ошибки (кратность \(t = 1\)).
+#### Вероятность ошибки
+Код является линейным, поэтому вероятность ошибочного декодирования не зависит от того, какое именно слово передавалось. Рассмотрим передачу слова $c_0 = 00000$.  
+Минимальное расстояние кода $d_{\min}$ найдём, вычислив попарные расстояния Хэмминга между всеми кодовыми словами:
 
-При декодировании по минимуму расстояния принятый вектор будет правильно декодирован, если он находится в шаре радиуса 1 вокруг переданного слова. Для слова \(00000\) такой шар содержит само слово (вес 0) и все пять векторов с одной единицей. Всего \(1 + 5 = 6\) векторов.
+- $d(00000, 10110) = 3$
+- $d(00000, 01011) = 3$
+- $d(00000, 11101) = 4$
+- $d(10110, 01011) = 4$
+- $d(10110, 11101) = 3$
+- $d(01011, 11101) = 3$
 
-Вероятность того, что при передаче \(00000\) будет принят один из этих векторов, равна:
-\[
+Таким образом, $d_{\min} = 3$. Следовательно, код гарантированно исправляет любые однократные ошибки (кратность $t = 1$).
+
+При декодировании по минимуму расстояния принятый вектор будет правильно декодирован, если он находится в шаре радиуса $1$ вокруг переданного слова. Для слова $00000$ такой шар содержит само слово (вес $0$) и все пять векторов с одной единицей. Всего $1 + 5 = 6$ векторов.
+
+Вероятность того, что при передаче $00000$ будет принят один из этих векторов, равна:
+
+$$
 P_{\text{прав}} = (1-p)^5 + 5p(1-p)^4.
-\]
-Тогда вероятность ошибки
-\[
-P_{\text{ош}} = 1 - P_{\text{прав}} = 1 - (1-p)^5 - 5p(1-p)^4.
-\]
-Подставляя \(p = 10^{-3}\), воспользуемся приближёнными формулами:
-\[
-(1-p)^5 \approx 1 - 5p + 10p^2,\quad 5p(1-p)^4 \approx 5p(1 - 4p) = 5p - 20p^2.
-\]
-Сумма: \(1 - 5p + 10p^2 + 5p - 20p^2 = 1 - 10p^2\). Отсюда
-\[
-P_{\text{ош}} \approx 10p^2 = 10 \cdot (10^{-3})^2 = 10^{-5}.
-\]
+$$
 
-### Порождающая и проверочная матрицы
-Код линейный, размерность \(k = 2\), длина \(n = 5\). В качестве базисных векторов выберем два ненулевых кодовых слова, например, соответствующие информационным последовательностям 10 и 01: \(\mathbf{g}_1 = 10110\), \(\mathbf{g}_2 = 01011\). Тогда порождающая матрица имеет вид:
-\[
+Тогда вероятность ошибки
+
+$$
+P_{\text{ошибки}} = 1 - P_{\text{прав}} = 1 - (1-p)^5 - 5p(1-p)^4.
+$$
+
+Подставляя $p = 10^{-3}$, воспользуемся приближёнными формулами (пренебрегая членами порядка $p^3$ и выше):
+
+$$
+(1-p)^5 \approx 1 - 5p + 10p^2, \quad 5p(1-p)^4 \approx 5p - 20p^2.
+$$
+
+Суммируя:
+
+$$
+P_{\text{прав}} \approx 1 - 10p^2.
+$$
+
+Отсюда
+
+$$
+P_{\text{ошибки}} \approx 10p^2 = 10 \cdot (10^{-3})^2 = 10^{-5}.
+$$
+
+#### Порождающая и проверочная матрицы
+Код линейный, размерность $k = 2$, длина $n = 5$. В качестве базисных векторов выберем два ненулевых кодовых слова, например, соответствующие информационным последовательностям $10$ и $01$: $\mathbf{g}_1 = 10110$, $\mathbf{g}_2 = 01011$. Тогда порождающая матрица имеет вид:
+
+$$
 G = \begin{bmatrix}
 1 & 0 & 1 & 1 & 0 \\
 0 & 1 & 0 & 1 & 1
 \end{bmatrix}.
-\]
+$$
 
-Проверочная матрица \(H\) размера \(3 \times 5\) должна удовлетворять условию \(G H^{\mathsf{T}} = 0\) (все операции в поле \(GF(2)\)). Пусть строки \(H\) равны \(\mathbf{h}_1, \mathbf{h}_2, \mathbf{h}_3\). Тогда для каждой строки \(G\) получаем уравнения:
-\[
+Проверочная матрица $H$ размера $3 \times 5$ должна удовлетворять условию $G H^{\mathsf{T}} = 0$ (все операции в поле $GF(2)$). Пусть строки $H$ равны $\mathbf{h}_1, \mathbf{h}_2, \mathbf{h}_3$. Тогда для каждой строки $G$ получаем уравнения:
+
+$$
 \begin{cases}
 1\cdot h_{11} + 0\cdot h_{12} + 1\cdot h_{13} + 1\cdot h_{14} + 0\cdot h_{15} = 0, \\
 0\cdot h_{21} + 1\cdot h_{22} + 0\cdot h_{23} + 1\cdot h_{24} + 1\cdot h_{25} = 0.
 \end{cases}
-\]
-Здесь \(h_{ij}\) – \(j\)-й элемент \(i\)-й строки \(H\). Эти уравнения должны выполняться для каждой строки \(H\) независимо, поэтому фактически мы имеем систему для каждого \(\mathbf{h}\):
-\[
+$$
+
+Здесь $h_{ij}$ – $j$-й элемент $i$-й строки $H$. Эти уравнения должны выполняться для каждой строки $H$ независимо, поэтому фактически мы имеем систему для каждого $\mathbf{h}$:
+
+$$
 h_1 + h_3 + h_4 = 0,\quad h_2 + h_4 + h_5 = 0.
-\]
-Выразим \(h_1 = h_3 + h_4\), \(h_2 = h_4 + h_5\). Три свободные переменные (\(h_3, h_4, h_5\)) позволяют построить три линейно независимых решения. Выбирая их, например, как \((h_3,h_4,h_5) = (1,1,1),\ (1,0,0),\ (0,1,0)\), получаем строки:
-\[
+$$
+
+Выразим $h_1 = h_3 + h_4$, $h_2 = h_4 + h_5$. Три свободные переменные ($h_3, h_4, h_5$) позволяют построить три линейно независимых решения. Выбирая их, например, как $(h_3,h_4,h_5) = (1,1,1),\ (1,0,0),\ (0,1,0)$, получаем строки:
+
+$$
 \begin{aligned}
 &(h_1,h_2,h_3,h_4,h_5) = (1+1,\ 1+1,\ 1,1,1) = (0,0,1,1,1),\\
 &(1+0,\ 0+0,\ 1,0,0) = (1,0,1,0,0),\\
 &(0+1,\ 0+1,\ 0,1,0) = (1,1,0,1,0).
 \end{aligned}
-\]
+$$
+
 Таким образом,
-\[
+
+$$
 H = \begin{bmatrix}
 0 & 0 & 1 & 1 & 1 \\
 1 & 0 & 1 & 0 & 0 \\
 1 & 1 & 0 & 1 & 0
 \end{bmatrix}.
-\]
-Непосредственной проверкой убеждаемся, что \(G H^{\mathsf{T}} = 0\) (все суммы по модулю 2 равны нулю).
+$$
+
+Непосредственной проверкой убеждаемся, что $G H^{\mathsf{T}} = 0$ (все суммы по модулю $2$ равны нулю).
 
 ---
 
 ## Задача 2
-Показать, что расстояние Хэмминга удовлетворяет аксиомам метрики.
+Показать, что расстояние Хэмминга удовлетворяет аксиомам расстояния и может использоваться как метрика.
 
-Расстояние Хэмминга \(d(x,y)\) между двумя двоичными словами \(x = (x_1,\dots,x_n)\) и \(y = (y_1,\dots,y_n)\) определяется как число позиций, в которых символы различаются:
-\[
+### Решение
+Расстояние Хэмминга $d(x,y)$ между двумя двоичными словами $x = (x_1,\dots,x_n)$ и $y = (y_1,\dots,y_n)$ определяется как число позиций, в которых символы различаются:
+
+$$
 d(x,y) = \bigl|\{i \mid x_i \neq y_i\}\bigr|.
-\]
+$$
 
 Проверим три аксиомы метрики:
 
-1. **Симметричность:** \(d(x,y) = d(y,x)\) очевидна, так как условие \(x_i \neq y_i\) равносильно \(y_i \neq x_i\).
+1. **Симметричность:** $d(x,y) = d(y,x)$ очевидна, так как условие $x_i \neq y_i$ равносильно $y_i \neq x_i$.
 
-2. **Неотрицательность и тождество:** \(d(x,y) \ge 0\) и \(d(x,y)=0\) тогда и только тогда, когда \(x = y\). Действительно, если слова совпадают во всех позициях, то число несовпадений равно нулю; если есть хотя бы одно различие, расстояние положительно.
+2. **Неотрицательность и тождество:** $d(x,y) \ge 0$ и $d(x,y)=0$ тогда и только тогда, когда $x = y$. Действительно, если слова совпадают во всех позициях, то число несовпадений равно нулю; если есть хотя бы одно различие, расстояние положительно.
 
-3. **Неравенство треугольника:** для любых слов \(x, y, z\) должно выполняться \(d(x,y) \le d(x,z) + d(z,y)\). Рассмотрим произвольную позицию \(i\). Если \(x_i = y_i\), то вклад в левую часть равен 0. В правой части возможны случаи:
-   - Если \(x_i = z_i = y_i\), то оба слагаемых равны 0.
-   - Если \(x_i = z_i \neq y_i\), то \(d(x,z)\) не увеличивается, а \(d(z,y)\) увеличивается на 1.
-   - Если \(x_i \neq z_i = y_i\), то \(d(z,y)=0\), а \(d(x,z)=1\).
-   - Если \(x_i \neq z_i \neq y_i\) и \(x_i \neq y_i\), то каждое из расстояний \(d(x,z)\) и \(d(z,y)\) содержит эту позицию, в сумме давая 2, в то время как левая часть содержит 1.
-   - Если \(x_i \neq z_i = y_i\)? уже рассмотрено.
+3. **Неравенство треугольника:** для любых слов $x, y, z$ должно выполняться $d(x,y) \le d(x,z) + d(z,y)$. Рассмотрим произвольную позицию $i$. Если $x_i = y_i$, то вклад в левую часть равен $0$. В правой части возможны случаи:
+   - Если $x_i = z_i = y_i$, то оба слагаемых равны $0$.
+   - Если $x_i = z_i \neq y_i$, то $d(x,z)$ не увеличивается, а $d(z,y)$ увеличивается на $1$.
+   - Если $x_i \neq z_i = y_i$, то $d(z,y)=0$, а $d(x,z)=1$.
+   - Если $x_i \neq z_i \neq y_i$ и $x_i \neq y_i$, то каждое из расстояний $d(x,z)$ и $d(z,y)$ содержит эту позицию, в сумме давая $2$, в то время как левая часть содержит $1$.
+   - Все остальные комбинации сводятся к перечисленным.  
    Таким образом, для каждой позиции вклад в левую часть не превосходит суммы вкладов в правую. Суммируя по всем позициям, получаем требуемое неравенство.
 
 Следовательно, расстояние Хэмминга является метрикой на множестве двоичных слов.
@@ -109,21 +139,26 @@ d(x,y) = \bigl|\{i \mid x_i \neq y_i\}\bigr|.
 ---
 
 ## Задача 3
-Доказать теорему: код с минимальным расстоянием \(d_{\min}\) исправляет любые комбинации ошибок кратности \(t \le \left\lfloor \frac{d_{\min}-1}{2} \right\rfloor\).
+Доказать теорему: код с минимальным расстоянием $d_{\min}$ исправляет любые комбинации ошибок кратности $t \le \left\lfloor \dfrac{d_{\min}-1}{2} \right\rfloor$.
 
-*Доказательство.* Пусть код \(C\) имеет минимальное расстояние \(d = d_{\min}\). Предположим, что передано кодовое слово \(c_i\), а принят вектор \(x\), причём произошло не более \(t\) ошибок, т.е. \(d(c_i, x) \le t\). Покажем, что при выполнении условия \(t \le \lfloor (d-1)/2 \rfloor\) вектор \(x\) будет ближе к \(c_i\), чем к любому другому кодовому слову \(c_j \neq c_i\).
+### Решение
+*Доказательство.* Пусть код $C$ имеет минимальное расстояние $d = d_{\min}$. Предположим, что передано кодовое слово $c_i$, а принят вектор $x$, причём произошло не более $t$ ошибок, т.е. $d(c_i, x) \le t$. Покажем, что при выполнении условия $t \le \lfloor (d-1)/2 \rfloor$ вектор $x$ будет ближе к $c_i$, чем к любому другому кодовому слову $c_j \neq c_i$.
 
-Рассмотрим произвольное другое кодовое слово \(c_j\). По неравенству треугольника для метрики Хэмминга:
-\[
+Рассмотрим произвольное другое кодовое слово $c_j$. По неравенству треугольника для метрики Хэмминга:
+
+$$
 d(c_i, c_j) \le d(c_i, x) + d(x, c_j).
-\]
-Так как \(d(c_i, c_j) \ge d\) и \(d(c_i, x) \le t\), получаем:
-\[
-d \le t + d(x, c_j) \quad \Rightarrow \quad d(x, c_j) \ge d - t.
-\]
-Если \(d - t > t\), т.е. \(d > 2t\), то \(d(x, c_j) > t \ge d(c_i, x)\). Значит, \(x\) действительно ближе к \(c_i\), чем к любому другому кодовому слову, и декодирование по минимуму расстояния будет правильным.
+$$
 
-Условие \(d > 2t\) равносильно \(t < d/2\). Поскольку \(t\) целое, максимальное целое \(t\), удовлетворяющее этому неравенству, есть \(\lfloor (d-1)/2 \rfloor\). Таким образом, код исправляет все ошибки кратности не более этой величины.
+Так как $d(c_i, c_j) \ge d$ и $d(c_i, x) \le t$, получаем:
+
+$$
+d \le t + d(x, c_j) \quad \Rightarrow \quad d(x, c_j) \ge d - t.
+$$
+
+Если $d - t > t$, т.е. $d > 2t$, то $d(x, c_j) > t \ge d(c_i, x)$. Значит, $x$ действительно ближе к $c_i$, чем к любому другому кодовому слову, и декодирование по минимуму расстояния будет правильным.
+
+Условие $d > 2t$ равносильно $t < d/2$. Поскольку $t$ целое, максимальное целое $t$, удовлетворяющее этому неравенству, есть $\lfloor (d-1)/2 \rfloor$. Таким образом, код исправляет все ошибки кратности не более этой величины.
 
 ---
 
@@ -143,71 +178,90 @@ d \le t + d(x, c_j) \quad \Rightarrow \quad d(x, c_j) \ge d - t.
 
 найти порождающую и проверочную матрицы.
 
-### Проверка линейности
-Код является линейным, если сумма (по модулю 2) любых двух кодовых слов также принадлежит коду. Непосредственной проверкой (или заметив, что все ненулевые слова имеют чётный вес и замкнуты относительно сложения) убеждаемся, что данное множество образует линейный код. Например, \(110100 + 011010 = 101110\) (есть в таблице), и т.д. Следовательно, размерность кода равна 3 (так как имеется 8 кодовых слов, включая нулевое).
+### Решение
 
-### Порождающая матрица
-В качестве базисных векторов выберем слова, соответствующие информационным последовательностям 100, 010 и 001:
-\[
+#### Проверка линейности
+Код является линейным, если сумма (по модулю $2$) любых двух кодовых слов также принадлежит коду. Непосредственной проверкой (или заметив, что все ненулевые слова имеют чётный вес и замкнуты относительно сложения) убеждаемся, что данное множество образует линейный код. Например, $110100 + 011010 = 101110$ (есть в таблице), и т.д. Следовательно, размерность кода равна $3$ (так как имеется $8$ кодовых слов, включая нулевое).
+
+#### Порождающая матрица
+В качестве базисных векторов выберем слова, соответствующие информационным последовательностям $100$, $010$ и $001$:
+
+$$
 \mathbf{g}_1 = 110100,\quad \mathbf{g}_2 = 011010,\quad \mathbf{g}_3 = 101001.
-\]
-Эти три вектора линейно независимы (ни один не является суммой двух других). Тогда порождающая матрица \(G\) размера \(3 \times 6\) имеет вид:
-\[
+$$
+
+Эти три вектора линейно независимы (ни один не является суммой двух других). Тогда порождающая матрица $G$ размера $3 \times 6$ имеет вид:
+
+$$
 G = \begin{bmatrix}
 1 & 1 & 0 & 1 & 0 & 0 \\
 0 & 1 & 1 & 0 & 1 & 0 \\
 1 & 0 & 1 & 0 & 0 & 1
 \end{bmatrix}.
-\]
+$$
 
-### Проверочная матрица
-Проверочная матрица \(H\) размера \(3 \times 6\) должна удовлетворять \(G H^{\mathsf{T}} = 0\). Запишем условия для строки \(H\): \(\mathbf{h} = (h_1, h_2, h_3, h_4, h_5, h_6)\). Из \(G \mathbf{h}^{\mathsf{T}} = 0\) получаем систему:
-\[
+#### Проверочная матрица
+Проверочная матрица $H$ размера $3 \times 6$ должна удовлетворять $G H^{\mathsf{T}} = 0$. Запишем условия для строки $H$: $\mathbf{h} = (h_1, h_2, h_3, h_4, h_5, h_6)$. Из $G \mathbf{h}^{\mathsf{T}} = 0$ получаем систему:
+
+$$
 \begin{cases}
 h_1 + h_2 + h_4 = 0, \\
 h_2 + h_3 + h_5 = 0, \\
 h_1 + h_3 + h_6 = 0.
 \end{cases}
-\]
+$$
+
 Выразим:
-\[
+
+$$
 h_1 = h_2 + h_4,\quad h_2 = h_3 + h_5,\quad h_6 = h_1 + h_3.
-\]
-Подставляя \(h_1\) в последнее: \(h_6 = (h_2 + h_4) + h_3 = h_2 + h_3 + h_4\). Но \(h_2 = h_3 + h_5\), поэтому \(h_6 = (h_3 + h_5) + h_3 + h_4 = h_5 + h_4\) (так как \(h_3+h_3=0\)). Итак, имеем:
-\[
+$$
+
+Подставляя $h_1$ в последнее: $h_6 = (h_2 + h_4) + h_3 = h_2 + h_3 + h_4$. Но $h_2 = h_3 + h_5$, поэтому $h_6 = (h_3 + h_5) + h_3 + h_4 = h_5 + h_4$ (так как $h_3 + h_3 = 0$). Итак, имеем:
+
+$$
 h_1 = h_2 + h_4,\quad h_2 = h_3 + h_5,\quad h_6 = h_4 + h_5.
-\]
-Три свободные переменные: \(h_3, h_4, h_5\). Выбирая их значения, получим три линейно независимые строки. Например:
-- При \((h_3,h_4,h_5) = (0,0,1)\): \(h_2 = 0+1=1\), \(h_1 = 1+0=1\), \(h_6 = 0+1=1\) → строка \((1,1,0,0,1,1)\).
-- При \((0,1,0)\): \(h_2 = 0+0=0\), \(h_1 = 0+1=1\), \(h_6 = 1+0=1\) → \((1,0,0,1,0,1)\).
-- При \((1,0,0)\): \(h_2 = 1+0=1\), \(h_1 = 1+0=1\), \(h_6 = 0+0=0\) → \((1,1,1,0,0,0)\).
+$$
+
+Три свободные переменные: $h_3, h_4, h_5$. Выбирая их значения, получим три линейно независимые строки. Например:
+
+- При $(h_3,h_4,h_5) = (0,0,1)$:  
+  $h_2 = 0+1=1$, $h_1 = 1+0=1$, $h_6 = 0+1=1$ → строка $(1,1,0,0,1,1)$.
+- При $(0,1,0)$:  
+  $h_2 = 0+0=0$, $h_1 = 0+1=1$, $h_6 = 1+0=1$ → строка $(1,0,0,1,0,1)$.
+- При $(1,0,0)$:  
+  $h_2 = 1+0=1$, $h_1 = 1+0=1$, $h_6 = 0+0=0$ → строка $(1,1,1,0,0,0)$.
 
 Таким образом,
-\[
+
+$$
 H = \begin{bmatrix}
 1 & 1 & 0 & 0 & 1 & 1 \\
 1 & 0 & 0 & 1 & 0 & 1 \\
 1 & 1 & 1 & 0 & 0 & 0
 \end{bmatrix}.
-\]
+$$
 
-Проверим выполнение условия \(G H^{\mathsf{T}} = 0\) (все вычисления по модулю 2):
-\[
+Проверим выполнение условия $G H^{\mathsf{T}} = 0$ (все вычисления по модулю $2$):
+
+$$
 G H^{\mathsf{T}} = \begin{bmatrix}
 1\cdot1+1\cdot1+0\cdot0+1\cdot0+0\cdot1+0\cdot1 & 1\cdot1+1\cdot0+0\cdot0+1\cdot1+0\cdot0+0\cdot1 & 1\cdot1+1\cdot1+0\cdot1+1\cdot0+0\cdot0+0\cdot0 \\
 0\cdot1+1\cdot1+1\cdot0+0\cdot0+1\cdot1+0\cdot1 & 0\cdot1+1\cdot0+1\cdot0+0\cdot1+1\cdot0+0\cdot1 & 0\cdot1+1\cdot1+1\cdot1+0\cdot0+1\cdot0+0\cdot0 \\
 1\cdot1+0\cdot1+1\cdot0+0\cdot0+0\cdot1+1\cdot1 & 1\cdot1+0\cdot0+1\cdot0+0\cdot1+0\cdot0+1\cdot1 & 1\cdot1+0\cdot1+1\cdot1+0\cdot0+0\cdot0+1\cdot0
 \end{bmatrix}
-\]
-Вычисляя каждую сумму по модулю 2:
-- Элемент (1,1): \(1+1+0+0+0+0 = 0\)
-- (1,2): \(1+0+0+1+0+0 = 0\)
-- (1,3): \(1+1+0+0+0+0 = 0\)
-- (2,1): \(0+1+0+0+1+0 = 0\)
-- (2,2): \(0+0+0+0+0+0 = 0\)
-- (2,3): \(0+1+1+0+0+0 = 0\)
-- (3,1): \(1+0+0+0+0+1 = 0\)
-- (3,2): \(1+0+0+0+0+1 = 0\)
-- (3,3): \(1+0+1+0+0+0 = 0\)
+$$
 
-Все нули, значит \(H\) – искомая проверочная матрица.
+Вычисляя каждую сумму по модулю $2$:
+
+- Элемент $(1,1)$: $1+1+0+0+0+0 = 0$
+- $(1,2)$: $1+0+0+1+0+0 = 0$
+- $(1,3)$: $1+1+0+0+0+0 = 0$
+- $(2,1)$: $0+1+0+0+1+0 = 0$
+- $(2,2)$: $0+0+0+0+0+0 = 0$
+- $(2,3)$: $0+1+1+0+0+0 = 0$
+- $(3,1)$: $1+0+0+0+0+1 = 0$
+- $(3,2)$: $1+0+0+0+0+1 = 0$
+- $(3,3)$: $1+0+1+0+0+0 = 0$
+
+Все нули, значит $H$ – искомая проверочная матрица.
