--- a/1/1 ДЗ.md
+++ b/1/1 ДЗ.md
@@ -1,4 +1,4 @@
-# Домашнее задание по теории кодирования
+# Домашнее задание 1
 
 ## Задача 1
 Дан $(5,2)$-код, кодовые слова которого приведены в таблице:
