--- a/2/2 ДЗ.md
+++ b/2/2 ДЗ.md
@@ -1,8 +1,53 @@
 # Домашнее задание 2
 
-## Задача 1. Расширенный код Хэмминга (8,4)
+## Задача 1. Построение порождающей матрицы расширенного кода Хэмминга (8,4)
 
-Расширенный код Хэмминга длины 8 и размерности 4 получается из классического кода Хэмминга (7,4) добавлением общей проверки на чётность. Это линейный код, который можно задать, например, следующей порождающей матрицей (приведена в несистематическом виде, но удобна для дальнейших вычислений):
+Для получения расширенного кода Хэмминга длины 8 и размерности 4 необходимо взять проверочную матрицу исходного (7,4)-кода Хэмминга, дополнить её столбцом из нулей и добавить строку из всех единиц. Затем путём элементарных преобразований привести матрицу к систематическому виду и извлечь из неё порождающую матрицу.
+
+Исходная проверочная матрица (7,4)-кода:
+
+$$
+H = \begin{bmatrix}
+1 & 0 & 1 & 0 & 1 & 0 & 1 \\
+0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+0 & 0 & 0 & 1 & 1 & 1 & 1
+\end{bmatrix}.
+$$
+
+Добавляем нулевой столбец и строку единиц, получаем проверочную матрицу для (8,4)-кода:
+
+$$
+H_{8,4} = \begin{bmatrix}
+0 & 1 & 0 & 1 & 0 & 1 & 0 & 1 \\
+0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 \\
+0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 \\
+1 & 1 & 1 & 1 & 1 & 1 & 1 & 1
+\end{bmatrix}.
+$$
+
+Приводим её к систематическому виду с помощью преобразований строк (промежуточные шаги опущены для краткости). В результате получаем систематическую проверочную матрицу:
+
+$$
+H_{\text{sys}} = \begin{bmatrix}
+0 & 1 & 1 & 1 & 1 & 0 & 0 & 0 \\
+1 & 0 & 1 & 1 & 0 & 1 & 0 & 0 \\
+1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 \\
+1 & 1 & 1 & 0 & 0 & 0 & 0 & 1
+\end{bmatrix}.
+$$
+
+Из неё легко извлечь порождающую матрицу в систематической форме:
+
+$$
+G_{\text{sys}} = \begin{bmatrix}
+1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 \\
+0 & 1 & 0 & 1 & 1 & 0 & 1 & 1 \\
+0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 \\
+0 & 0 & 0 & 1 & 1 & 1 & 1 & 0
+\end{bmatrix}.
+$$
+
+Если выполнить обратные преобразования, получим исходную (несистематическую) порождающую матрицу, удобную для дальнейших вычислений:
 
 $$
 G = \begin{bmatrix}
@@ -13,7 +58,11 @@ G = \begin{bmatrix}
 \end{bmatrix}.
 $$
 
-Все кодовые слова получаются умножением всевозможных информационных векторов длины 4 на матрицу \(G\) (операции выполняются в поле \(\text{GF}(2)\)). Ниже приведён полный список кодовых слов (КС) с указанием их веса Хэмминга.
+### Минимальное расстояние и кодовые слова
+
+Минимальное расстояние линейного кода равно минимальному числу линейно зависимых столбцов его проверочной матрицы. В данном случае это число равно 4, следовательно, $d_{\min} = 4$.
+
+Перечислим все кодовые слова, получаемые умножением информационных векторов на матрицу $G$, и их веса Хэмминга:
 
 | Информационный вектор | Кодовое слово | Вес |
 |-----------------------|---------------|-----|
@@ -34,46 +83,46 @@ $$
 | 0111 | 00011110 | 4 |
 | 1111 | 11111111 | 8 |
 
-Как видно из таблицы, все ненулевые слова, кроме слова из одних единиц, имеют вес 4. Слово \(11111111\) имеет вес 8. Минимальное расстояние кода равно минимальному весу ненулевого слова, т.е. \(d_{\min} = 4\).
-
-Поскольку код линеен, расстояние между двумя различными кодовыми словами равно весу их суммы. Сумма двух слов веса 4 может иметь вес 4 (в большинстве случаев) или 8 (если слова являются взаимными дополнениями, т.е. одно равно другому, сложенному с \(11111111\)). Сумма любого слова с \(11111111\) даёт слово веса 4. Таким образом, все возможные расстояния между различными словами равны либо 4, либо 8, а минимальное равно 4.
+Все ненулевые слова, кроме слова из одних единиц, имеют вес 4. Слово $11111111$ имеет вес 8. Расстояния между различными словами (кроме пары $11111111$ с самим собой) равны либо 4, либо 8, что подтверждает $d_{\min}=4$.
 
 ---
 
-## Задача 2. Дуальный код Хэмминга — симплекс-код
+## Задача 2. Дуальный код кода Хэмминга как симплекс-код
 
-Пусть задан код Хэмминга длины \(n = 2^r - 1\) и размерности \(k = 2^r - 1 - r\). Его проверочная матрица \(H\) размера \(r \times n\) состоит из всех ненулевых столбцов длины \(r\). Дуальный код \(\mathcal{C}^\perp\) имеет параметры \((n, r)\) и порождается строками матрицы \(H\).
+Необходимо показать, что код, дуальный коду Хэмминга, является симплекс-кодом, т.е. все расстояния между его ненулевыми словами одинаковы и равны $2^{r-1}$.
 
-Возьмём произвольное ненулевое слово \(\mathbf{c} \in \mathcal{C}^\perp\). Оно представляется в виде линейной комбинации строк \(H\): \(\mathbf{c} = \mathbf{u} H\), где \(\mathbf{u} \in \text{GF}(2)^r\), \(\mathbf{u} \neq \mathbf{0}\). Координата \(c_j\) равна скалярному произведению \(\mathbf{u}\) и \(j\)-го столбца \(H\): \(c_j = \mathbf{u} \cdot \mathbf{h}_j\). По построению столбцы \(\mathbf{h}_j\) пробегают все ненулевые векторы длины \(r\).
+Пусть задан код Хэмминга с параметрами:
+- длина $n = 2^r - 1$,
+- размерность $k = 2^r - 1 - r$.
 
-Для фиксированного ненулевого \(\mathbf{u}\) рассмотрим уравнение \(\mathbf{u} \cdot \mathbf{x} = 1\) относительно \(\mathbf{x} \in \text{GF}(2)^r\). Среди всех \(2^r\) векторов (включая нулевой) ровно половина, т.е. \(2^{r-1}\), дают скалярное произведение 1. Нулевой вектор даёт 0, поэтому среди ненулевых векторов решений также \(2^{r-1}\). Следовательно, количество столбцов \(\mathbf{h}_j\), для которых \(c_j = 1\), равно \(2^{r-1}\). Таким образом, вес Хэмминга любого ненулевого кодового слова \(\mathbf{c}\) равен \(2^{r-1}\).
+Его проверочная матрица $H$ размера $r \times n$ состоит из всех ненулевых $r$-мерных столбцов. Дуальный код $\mathcal{C}^\perp$ имеет параметры $(n, r)$ и порождается строками матрицы $H$.
 
-В силу линейности кода расстояние между двумя различными словами \(\mathbf{c}_1, \mathbf{c}_2\) есть вес их разности \(\mathbf{c}_1 + \mathbf{c}_2\), который снова равен \(2^{r-1}\) (так как сумма также является ненулевым словом). Итак, все ненулевые слова имеют одинаковый вес, что в точности определяет **симплекс-код** (код с постоянным весом всех ненулевых слов). Утверждение доказано.
+Рассмотрим произвольное ненулевое кодовое слово $\mathbf{c} \in \mathcal{C}^\perp$. Оно представляется как линейная комбинация строк $H$: $\mathbf{c} = \mathbf{u} H$, где $\mathbf{u} \in \text{GF}(2)^r$, $\mathbf{u} \neq \mathbf{0}$. Координата $c_j$ равна скалярному произведению $\mathbf{u}$ и $j$-го столбца $H$: $c_j = \mathbf{u} \cdot \mathbf{h}_j$.
+
+По построению столбцы $\mathbf{h}_j$ пробегают все ненулевые векторы длины $r$. Для фиксированного ненулевого $\mathbf{u}$ уравнение $\mathbf{u} \cdot \mathbf{x} = 1$ имеет ровно $2^{r-1}$ решений среди всех $2^r$ векторов $\mathbf{x}$ (включая нулевой). Нулевой вектор даёт скалярное произведение 0, поэтому среди ненулевых векторов также ровно $2^{r-1}$ удовлетворяют условию. Следовательно, количество столбцов, для которых $c_j = 1$, равно $2^{r-1}$. Таким образом, вес Хэмминга любого ненулевого слова $\mathbf{c}$ равен $2^{r-1}$.
+
+В силу линейности кода расстояние между двумя различными словами $\mathbf{c}_1$ и $\mathbf{c}_2$ есть вес их суммы $\mathbf{c}_1 + \mathbf{c}_2$, которая также является ненулевым кодовым словом. Следовательно, все расстояния между различными словами равны $2^{r-1}$, что и характеризует симплекс-код.
 
 ---
 
-## Задача 3. Код, дуальный к коду с проверкой на чётность
+## Задача 3. Код, дуальный коду с проверкой на чётность
 
-Код с проверкой на чётность длины \(n\) — это множество всех двоичных векторов длины \(n\), у которых сумма координат равна 0. Он является линейным \((n, n-1)\)-кодом. Найдём дуальный к нему код.
+Рассмотрим код с проверкой на чётность длины $n$. Он состоит из всех двоичных векторов длины $n$, у которых сумма координат равна $0$. Это линейный $(n, n-1)$-код. Найдём его дуальный код.
 
-По определению, дуальный код состоит из всех векторов \(\mathbf{v} \in \text{GF}(2)^n\), ортогональных каждому вектору с чётным весом. Условие ортогональности всем таким векторам равносильно тому, что все координаты \(\mathbf{v}\) одинаковы. Действительно, рассмотрим базисные векторы вида \(\mathbf{e}_i + \mathbf{e}_j\) (сумма двух различных единичных векторов). Их скалярное произведение с \(\mathbf{v}\) равно \(v_i + v_j\). Чтобы оно было нулевым для всех \(i \neq j\), необходимо \(v_i = v_j\) для всех \(i,j\). Следовательно, \(\mathbf{v}\) может быть либо нулевым вектором, либо вектором из всех единиц.
+Дуальный код включает все векторы $\mathbf{v} \in \text{GF}(2)^n$, ортогональные каждому вектору с чётным весом. Условие ортогональности всем таким векторам эквивалентно тому, что все координаты $\mathbf{v}$ одинаковы. Действительно, векторы вида $\mathbf{e}_i + \mathbf{e}_j$ (сумма двух различных единичных векторов) имеют чётный вес, и их скалярное произведение с $\mathbf{v}$ равно $v_i + v_j$. Чтобы оно равнялось нулю для всех $i \neq j$, необходимо $v_i = v_j$ для всех $i,j$. Таким образом, возможны лишь два варианта: $\mathbf{v} = \mathbf{0}$ или $\mathbf{v} = \mathbf{1} = (1,1,\ldots,1)$.
 
-Таким образом, дуальный код представляет собой \((n,1)\)-код:
-- **Параметры:** длина \(n\), размерность \(k = 1\).
-- **Порождающая матрица:** одна строка из \(n\) единиц:
-  \[
-  G = \begin{bmatrix} 1 & 1 & \cdots & 1 \end{bmatrix}.
-  \]
-- **Проверочная матрица:** может быть записана как
-  \[
-  H = \begin{bmatrix} I_{n-1} & \mathbf{1} \end{bmatrix},
-  \]
-  где \(\mathbf{1}\) — столбец из \(n-1\) единицы.
+Следовательно, дуальный код является $(n,1)$-кодом:
 
-Кодовых слов всего два: \(\mathbf{0} = 00\ldots0\) и \(\mathbf{1} = 11\ldots1\). Минимальное расстояние равно \(n\) (вес единственного ненулевого слова).
+- **Параметры:** длина $n$, размерность $k = 1$.
+- **Порождающая матрица:** одна строка из $n$ единиц: $G = [1\ 1\ \ldots\ 1]$.
+- **Проверочная матрица:** может быть представлена как $H = [I_{n-1} \mid \mathbf{1}]$, где $\mathbf{1}$ — столбец из $n-1$ единицы.
 
-Исправляющая способность кода определяется максимальным числом ошибок \(t\), которое гарантированно исправляется при декодировании по минимуму расстояния. Для этого необходимо, чтобы шары радиуса \(t\) вокруг двух кодовых слов не пересекались, т.е. \(2t < n\). Отсюда
-\[
-t = \left\lfloor \frac{n-1}{2} \right\rfloor.
-\]
-При чётном \(n\) это \(\frac{n}{2} - 1\), при нечётном \(\frac{n-1}{2}\).
+Кодовых слов всего два: нулевое и слово из всех единиц. Минимальное расстояние равно $n$ (вес ненулевого слова).
+
+Исправляющая способность кода определяется максимальным числом ошибок $t$, которое гарантированно исправляется при декодировании по минимуму расстояния. Для кода из двух слов шары радиуса $t$ вокруг них не должны пересекаться, т.е. $2t < n$. Отсюда
+
+$$
+t = \lfloor (n-1)/2 \rfloor.
+$$
+
+При чётном $n$ это $n/2 - 1$, при нечётном $(n-1)/2$.
